feat: add content to about page

--- a/techblog_app/templates/techblog_app/about.html
+++ b/techblog_app/templates/techblog_app/about.html
@@ -78,8 +78,15 @@
     </div>
 </section>
 <section class="container px-3">
-
-
+    <div class="col-lg-6">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus ipsam eius sapiente consectetur
+            corrupti
+            possimus, similique ab perferendis labore accusamus maxime, itaque aliquam deleniti dolor debitis placeat.
+            Distinctio, commodi excepturi.</p>
+    </div>
+    <div class="flex-container col-lg-6">
+        <p class="text-warning">image</p>
+    </div>
 </section>
 <!-- </div> -->
 {% endblock content %}
