fix: add meta description

--- a/techblog_app/templates/techblog_app/about.html
+++ b/techblog_app/templates/techblog_app/about.html
@@ -84,9 +84,8 @@
             possimus, similique ab perferendis labore accusamus maxime, itaque aliquam deleniti dolor debitis placeat.
             Distinctio, commodi excepturi.</p>
     </div>
-    <div class="flex-container col-lg-6">
+    <div class="col-lg-6">
         <p class="text-warning">image</p>
     </div>
 </section>
-<!-- </div> -->
 {% endblock content %}
