--- a/techblog_app/templates/techblog_app/base.html
+++ b/techblog_app/templates/techblog_app/base.html
@@ -6,6 +6,8 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description"
+            content="The blog for discussing everything to do with code programing, and development.">
         {% if title %}
         <title>Tech Blog Home - {{ title }}</title>
         {% else %}
