--- a/techblog_app/templates/techblog_app/comment_form.html
+++ b/techblog_app/templates/techblog_app/comment_form.html
@@ -1,4 +1,5 @@
 {% extends 'techblog_app/base.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
 <section class="py-5 px-3" style="min-height: 560px;">
     <div class="container form-container col-md-10 col-lg-8">
@@ -6,7 +7,7 @@
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="pb-3 text-capitalize">Post a comment</legend>
-                {{ form }}
+                {{ form|crispy }}
             </fieldset>
             <div class="d-grid">
                 <button class="btn btn-primary d-block text mb-4 col-12 col-md-6 col-lg-4" type="submit">Post
