--- a/techblog_app/templates/techblog_app/post_markdown_editor_script.html
+++ b/techblog_app/templates/techblog_app/post_markdown_editor_script.html
@@ -1,7 +1,7 @@
 <script>
     // https://github.com/sparksuite/simplemde-markdown-editor
     var contentTextArea = document.getElementById("id_content");
-    var markdownEditor = new SimpleMDE({
+    var markdownEditor = new EasyMDE({
         element: contentTextArea,
         showIcons: ["code", "table"],
         hideIcons: ["fullscreen", "side-by-side"],
