--- a/techblog_app/templates/techblog_app/post_form.html
+++ b/techblog_app/templates/techblog_app/post_form.html
@@ -8,6 +8,7 @@
             <fieldset class="form-group">
                 <legend class="pb-3 text-capitalize">create blog post</legend>
                 {{ form|crispy }}
+                <!-- <textarea id="my-text-area"></textarea> -->
             </fieldset>
             <!-- <div class="d-flex justify-content-center mt-3"> -->
             <div class="d-flex">
