fix: add addEventListener for mobile text error

--- a/techblog_app/templates/techblog_app/post_markdown_editor_script.html
+++ b/techblog_app/templates/techblog_app/post_markdown_editor_script.html
@@ -1,8 +1,15 @@
 <script>
     // https://github.com/sparksuite/simplemde-markdown-editor
+
+
+    document.addEventListener('selectionchange', function (event) {
+        console.log(event.type);
+    });
+
     var contentTextArea = document.getElementById("id_content");
     var markdownEditor = new EasyMDE({
         element: contentTextArea,
+        showIcons: ['strikethrough', 'code', 'table', 'redo', 'heading'],
         hideIcons: ["fullscreen", "side-by-side"],
         spellChecker: false,
         status: ["autosave", "lines", "words"], // Optional usage
@@ -10,5 +17,10 @@
     // ensure the JavaScript editor updates to the crispy forms textarea
     markdownEditor.codemirror.on("change", function () {
         contentTextArea.value = markdownEditor.value();
-    }); 
+
+
+    });
+
+
+
 </script>
