feat: about page padding and footer created

--- a/techblog_app/templates/techblog_app/about.html
+++ b/techblog_app/templates/techblog_app/about.html
@@ -38,7 +38,9 @@
 
 
 <section class="container">
-    <h2 class="my-5 text-sm-start">Tools used</h2>
+    <div class="col-12 col-md-12">
+        <h2 class="my-5 px-2 px-sm-3 text-sm-start">Tools used</h2>
+    </div>
 
     <div class="d-flex justify-content-center px-3">
 
@@ -99,8 +101,8 @@
         </div>
     </div>
 </section>
-<section class="container pt-3 pb-5">
-    <div>
+<section class="container pt-3 pb-3">
+    <div class="px-2 px-sm-3">
         <h2 class="mt-5">Markdown editor used <strong>- EasyMDE</strong></h2>
         <h5 class="mb-4 text-muted">...can test it out here</h5>
         <textarea id="id_content"></textarea>
