--- a/techblog_app/templates/techblog_app/base.html
+++ b/techblog_app/templates/techblog_app/base.html
@@ -366,10 +366,17 @@
             {% block content %}{% endblock content %}
         </div>
 
-        {# script #}
+        <footer class="bg-secondary text-light mt-4">
+            <div class="container d-flex flex-wrap justify-content-between align-items-center py-3">
+                <p class="col-md-4 mb-0">© 2022 Donnchadh Mc Ginley</p>
+                <ul class="nav col-md-4 justify-content-end">
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-light">Home</a></li>
+                    <li class="nav-item"><a href="{% url 'techblog-about' %}" class="nav-link px-2 text-light">About</a>
+                    </li>
 
-
-
+                </ul>
+            </div>
+        </footer>
     </body>
 
 </html>
