--- a/techblog_app/static/techblog_app/css/index.css
+++ b/techblog_app/static/techblog_app/css/index.css
@@ -10773,8 +10773,9 @@ textarea.form-control-lg {
   --primary: #583ccc;
   --secondary: #384142;
   --light-gray: #f9fafb;
-  --link: #3e7ab6;
-  --link-hover: #2c6196;
+  --link: #a10a41;
+  --link-hover: #711939;
+  --name: #b7b9bb;
 }
 
 h1, .h1,
@@ -10844,4 +10845,8 @@ pre {
   max-width: 560px;
   border-radius: 3px;
   background-color: var(--light-gray);
+}
+
+footer .name-color {
+  color: var(--name);
 }
