fix: reverted back to easymde for now

--- a/techblog_app/templates/techblog_app/post_form.html
+++ b/techblog_app/templates/techblog_app/post_form.html
@@ -16,5 +16,5 @@
         </form>
     </div>
 </section>
-<!-- {% include 'techblog_app/post_markdown_editor_script.html' %} -->
+{% include 'techblog_app/post_markdown_editor_script.html' %}
 {% endblock content %}
