fix: update ckeditor try  fox width 100%

--- a/techblog_app/static/techblog_app/css/custom-eanymde.css
+++ b/techblog_app/static/techblog_app/css/custom-eanymde.css
@@ -30,3 +30,16 @@ td {
 code {
     color: var(--black) !important;
 }
+
+
+
+/* #django-ckeditor-widget {
+    display: flex;
+    flex-direction: column;
+    width: 100% !important;
+}
+
+
+#cke_description {
+    width: auto !important;
+} */
