--- a/techblog_app/templates/techblog_app/post_form.html
+++ b/techblog_app/templates/techblog_app/post_form.html
@@ -5,8 +5,9 @@
     <div class="container form-container col-md-10 col-lg-8">
         <form action="{% url 'post-create' %}" method="POST">
             {% csrf_token %}
-            <fieldset class="form-group">
+            <fieldset class="form-group" style="background-color: red;">
                 <legend class="pb-3 text-capitalize">create blog post</legend>
+                {{ form.media }}
                 {{ form|crispy }}
             </fieldset>
             <div class="d-flex">
@@ -15,5 +16,5 @@
         </form>
     </div>
 </section>
-{% include 'techblog_app/post_markdown_editor_script.html' %}
+<!-- {% include 'techblog_app/post_markdown_editor_script.html' %} -->
 {% endblock content %}
