fix quill editor used and fix css padding pre area

--- a/techblog_app/templates/techblog_app/about.html
+++ b/techblog_app/templates/techblog_app/about.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 <section class="container my-5">
-    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow">
+    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-2 border shadow">
         <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
             <h1 class="display-4 pb-4">Tech<span class="fw-bold">Blog</span> <strong class="text-dark">Border hero
                     with cropped image and
@@ -106,7 +106,9 @@
         <h2 class="mt-5">Markdown editor used <strong>- EasyMDE</strong></h2>
         <h5 class="mb-4 text-muted">...can test it out here</h5>
         <textarea id="id_content"></textarea>
+
+    </div>
+    </div>
     </div>
 </section>
-{% include 'techblog_app/post_markdown_editor_script.html' %}
 {% endblock content %}
