--- a/techblog_app/templates/techblog_app/post_detail.html
+++ b/techblog_app/templates/techblog_app/post_detail.html
@@ -143,7 +143,7 @@
     {% endif %}
 </section>
 
-<div class="d-flex justify-content-center my-4">
+<!-- <div class="d-flex justify-content-center my-4">
     {% if is_paginated %}
     {% if page_obj.has_previous %}
     <a class="pagination-btn btn btn-outline-secondary m-1" href="?page=1">First</a>
@@ -159,5 +159,5 @@
     <a class="pagination-btn btn btn-outline-secondary m-1" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
     {% endif %}
     {% endif %}
-</div>
+</div> -->
 {% endblock content %}
