fix: quill editor sizing of text color

--- a/techblog_app/static/techblog_app/css/custom-text-editor.css
+++ b/techblog_app/static/techblog_app/css/custom-text-editor.css
@@ -41,7 +41,7 @@ td {
 .ql-container {
     font-size: 2rem;
     border: 1px solid #ced4da !important;
-    border-radius: 0 0 4px 4px;
+    border-radius: 0 0 4rem 4rem;
     border-top: 0 !important;
 }
 
