--- a/techblog_app/static/techblog_app/css/custom-text-editor.css
+++ b/techblog_app/static/techblog_app/css/custom-text-editor.css
@@ -35,13 +35,13 @@ td {
 
 .ql-toolbar {
     border: 1px solid #ced4da !important;
-    border-radius: 0.4rem 0.4rem 0 0;
+    border-radius: 0.4em 0.4em 0 0;
 }
 
 .ql-container {
     font-size: 2rem;
     border: 1px solid #ced4da !important;
-    border-radius: 0 0 4rem 4rem;
+    border-radius: 0 0 6px 6px;
     border-top: 0 !important;
 }
 
