--- a/techblog_app/templates/techblog_app/backup_post_markdown_editor_script.html
+++ b/techblog_app/templates/techblog_app/backup_post_markdown_editor_script.html
@@ -1,4 +1,4 @@
-<script>
+<!-- <script>
     // https://github.com/sparksuite/simplemde-markdown-editor
 
     var contentTextArea = document.getElementById("id_content");
@@ -18,4 +18,4 @@
 
 
 
-</script>
+</script> -->
