--- a/techblog_app/templates/techblog_app/about.html
+++ b/techblog_app/templates/techblog_app/about.html
@@ -1,5 +1,7 @@
 {% extends 'techblog_app/base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
+
 {% block content %}
 <section class="container my-5">
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-2 border shadow">
@@ -36,14 +38,11 @@
     </div>
 </section>
 
-
 <section class="container">
     <div class="col-12 col-md-12">
         <h2 class="my-5 px-2 px-sm-3 text-sm-start">Tools used</h2>
     </div>
-
     <div class="d-flex justify-content-center px-3">
-
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 col-12 col-md-12">
             <div class="col">
                 <img class="mx-auto d-block brand-icon" src="{% static 'techblog_app/images/brand_svg/bootstrap.svg' %}"
@@ -103,12 +102,13 @@
 </section>
 <section class="container pt-3 pb-3">
     <div class="px-2 px-sm-3">
-        <h2 class="mt-5">Markdown editor used <strong>- EasyMDE</strong></h2>
+        <h2 class="mt-5">Markdown editor used - <strong><a href="https://quilljs.com/"
+                    target="_blank">Quill</a></strong></h2>
         <h5 class="mb-4 text-muted">...can test it out here</h5>
-        <textarea id="id_content"></textarea>
 
-    </div>
-    </div>
+        <section class="pb-5">
+            {% include 'techblog_app/about_quill_form.html' %}
+        </section>
     </div>
 </section>
 {% endblock content %}
