--- a/staticfiles/admin/css/responsive.css
+++ b/staticfiles/admin/css/responsive.css
@@ -1,6 +1,7 @@
 /* Tablets */
 
-input[type="submit"], button {
+input[type="submit"],
+button {
     -webkit-appearance: none;
     appearance: none;
 }
@@ -12,7 +13,8 @@ input[type="submit"], button {
         -webkit-text-size-adjust: 100%;
     }
 
-    td, th {
+    td,
+    th {
         padding: 10px;
         font-size: 0.875rem;
     }
@@ -24,7 +26,7 @@ input[type="submit"], button {
     /* Layout */
 
     #container {
-        min-width: 0;
+        min-width: 200px;
     }
 
     #content {
@@ -86,7 +88,8 @@ input[type="submit"], button {
         padding-right: 0;
     }
 
-    td .changelink, td .addlink {
+    td .changelink,
+    td .addlink {
         font-size: 0.8125rem;
     }
 
@@ -97,7 +100,7 @@ input[type="submit"], button {
         padding: 15px;
     }
 
-    #changelist-search > div {
+    #changelist-search>div {
         display: flex;
         flex-wrap: nowrap;
         max-width: 480px;
@@ -161,10 +164,11 @@ input[type="submit"], button {
     .filtered .actions,
 
     #changelist .paginator {
-        border-top-color: var(--hairline-color); /* XXX Is this used at all? */
+        border-top-color: var(--hairline-color);
+        /* XXX Is this used at all? */
     }
 
-    #changelist .results + .paginator {
+    #changelist .results+.paginator {
         border-top: none;
     }
 
@@ -205,7 +209,7 @@ input[type="submit"], button {
         padding: 0 10px;
     }
 
-    fieldset .fieldBox + .fieldBox {
+    fieldset .fieldBox+.fieldBox {
         margin-top: 10px;
         padding-top: 10px;
         border-top: 1px solid var(--hairline-color);
@@ -222,7 +226,7 @@ input[type="submit"], button {
 
     .aligned .related-lookup,
     .aligned .datetimeshortcuts,
-    .aligned .related-lookup + strong {
+    .aligned .related-lookup+strong {
         align-self: center;
         margin-left: 15px;
     }
@@ -243,7 +247,11 @@ input[type="submit"], button {
         margin: 0 0 5px 5px;
     }
 
-    .button, input[type=submit], input[type=button], .submit-row input, a.button {
+    .button,
+    input[type=submit],
+    input[type=button],
+    .submit-row input,
+    a.button {
         padding: 7px;
     }
 
@@ -253,13 +261,13 @@ input[type="submit"], button {
         float: none;
     }
 
-    .related-widget-wrapper-link + .selector {
+    .related-widget-wrapper-link+.selector {
         max-width: calc(100% - 30px);
         margin-right: 15px;
     }
 
-    select + .related-widget-wrapper-link,
-    .related-widget-wrapper-link + .related-widget-wrapper-link {
+    select+.related-widget-wrapper-link,
+    .related-widget-wrapper-link+.related-widget-wrapper-link {
         margin-left: 10px;
     }
 
@@ -285,7 +293,8 @@ input[type="submit"], button {
         flex: 1 1;
     }
 
-    .selector-available, .selector-chosen {
+    .selector-available,
+    .selector-chosen {
         width: auto;
         flex: 1 1;
         display: flex;
@@ -307,7 +316,8 @@ input[type="submit"], button {
         transform: translateY(-10px);
     }
 
-    .selector-add, .selector-remove {
+    .selector-add,
+    .selector-remove {
         width: 20px;
         height: 20px;
         background-size: 20px auto;
@@ -321,7 +331,8 @@ input[type="submit"], button {
         background-position: 0 -80px;
     }
 
-    a.selector-chooseall, a.selector-clearall {
+    a.selector-chooseall,
+    a.selector-clearall {
         align-self: center;
     }
 
@@ -330,7 +341,7 @@ input[type="submit"], button {
         max-width: 480px;
     }
 
-    .stacked > * {
+    .stacked>* {
         flex: 0 1 auto;
     }
 
@@ -338,7 +349,8 @@ input[type="submit"], button {
         margin-bottom: 0;
     }
 
-    .stacked .selector-available, .stacked .selector-chosen {
+    .stacked .selector-available,
+    .stacked .selector-chosen {
         width: auto;
     }
 
@@ -354,7 +366,8 @@ input[type="submit"], button {
         padding: 3px;
     }
 
-    .stacked .selector-add, .stacked .selector-remove {
+    .stacked .selector-add,
+    .stacked .selector-remove {
         background-size: 20px auto;
     }
 
@@ -366,11 +379,13 @@ input[type="submit"], button {
         background-position: 0 -40px;
     }
 
-    .active.selector-add:focus, .active.selector-add:hover {
+    .active.selector-add:focus,
+    .active.selector-add:hover {
         background-position: 0 -140px;
     }
 
-    .stacked .active.selector-add:focus, .stacked .active.selector-add:hover {
+    .stacked .active.selector-add:focus,
+    .stacked .active.selector-add:hover {
         background-position: 0 -60px;
     }
 
@@ -382,15 +397,18 @@ input[type="submit"], button {
         background-position: 0 0;
     }
 
-    .active.selector-remove:focus, .active.selector-remove:hover {
+    .active.selector-remove:focus,
+    .active.selector-remove:hover {
         background-position: 0 -100px;
     }
 
-    .stacked .active.selector-remove:focus, .stacked .active.selector-remove:hover {
+    .stacked .active.selector-remove:focus,
+    .stacked .active.selector-remove:hover {
         background-position: 0 -20px;
     }
 
-    .help-tooltip, .selector .help-icon {
+    .help-tooltip,
+    .selector .help-icon {
         display: none;
     }
 
@@ -414,10 +432,12 @@ input[type="submit"], button {
     }
 
     .datetimeshortcuts {
-        color: var(--border-color); /* XXX Redundant, .datetime span also sets #ccc */
+        color: var(--border-color);
+        /* XXX Redundant, .datetime span also sets #ccc */
     }
 
-    .form-row .datetime input.vDateField, .form-row .datetime input.vTimeField {
+    .form-row .datetime input.vDateField,
+    .form-row .datetime input.vTimeField {
         width: 75%;
     }
 
@@ -457,7 +477,7 @@ input[type="submit"], button {
         max-height: 300px;
     }
 
-    .olMap + .clear_features {
+    .olMap+.clear_features {
         display: block;
         margin-top: 10px;
     }
@@ -478,7 +498,9 @@ input[type="submit"], button {
 @media (max-width: 767px) {
     /* Layout */
 
-    #header, #content, #footer {
+    #header,
+    #content,
+    #footer {
         padding: 15px;
     }
 
@@ -492,11 +514,13 @@ input[type="submit"], button {
 
     /* Dashboard */
 
-    .colMS, .colSM {
+    .colMS,
+    .colSM {
         margin: 0;
     }
 
-    #content-related, .colSM #content-related {
+    #content-related,
+    .colSM #content-related {
         width: 100%;
         margin: 0;
     }
@@ -556,7 +580,7 @@ input[type="submit"], button {
         margin-left: 0;
     }
 
-    .object-tools li + li {
+    .object-tools li+li {
         margin-left: 15px;
     }
 
@@ -567,13 +591,13 @@ input[type="submit"], button {
     }
 
     .aligned .form-row,
-    .aligned .form-row > div {
+    .aligned .form-row>div {
         display: flex;
         flex-wrap: wrap;
         max-width: 100vw;
     }
 
-    .aligned .form-row > div {
+    .aligned .form-row>div {
         width: calc(100vw - 30px);
     }
 
@@ -585,7 +609,7 @@ input[type="submit"], button {
         width: auto;
     }
 
-    fieldset .fieldBox + .fieldBox {
+    fieldset .fieldBox+.fieldBox {
         margin-top: 15px;
         padding-top: 15px;
     }
@@ -624,9 +648,9 @@ input[type="submit"], button {
         padding: 1px 0 0 5px;
     }
 
-    .aligned label + p,
-    .aligned label + div.help,
-    .aligned label + div.readonly {
+    .aligned label+p,
+    .aligned label+div.help,
+    .aligned label+div.readonly {
         padding: 0;
         margin-left: 0;
     }
@@ -667,7 +691,7 @@ input[type="submit"], button {
         margin-bottom: -3px;
     }
 
-    form .aligned div.radiolist:not(.inline) div + div {
+    form .aligned div.radiolist:not(.inline) div+div {
         margin-top: 5px;
     }
 
@@ -683,20 +707,20 @@ input[type="submit"], button {
         order: 1;
     }
 
-    .related-widget-wrapper > a {
+    .related-widget-wrapper>a {
         order: 2;
     }
 
-    .related-widget-wrapper .radiolist ~ a {
+    .related-widget-wrapper .radiolist~a {
         align-self: flex-end;
     }
 
-    .related-widget-wrapper > select ~ a {
+    .related-widget-wrapper>select~a {
         align-self: center;
     }
 
-    select + .related-widget-wrapper-link,
-    .related-widget-wrapper-link + .related-widget-wrapper-link {
+    select+.related-widget-wrapper-link,
+    .related-widget-wrapper-link+.related-widget-wrapper-link {
         margin-left: 15px;
     }
 
@@ -706,11 +730,12 @@ input[type="submit"], button {
         flex-direction: column;
     }
 
-    .selector > * {
+    .selector>* {
         float: none;
     }
 
-    .selector-available, .selector-chosen {
+    .selector-available,
+    .selector-chosen {
         margin-bottom: 0;
         flex: 1 1 auto;
     }
@@ -737,15 +762,17 @@ input[type="submit"], button {
         background-position: 0 0;
     }
 
-    .active.selector-remove:focus, .active.selector-remove:hover {
+    .active.selector-remove:focus,
+    .active.selector-remove:hover {
         background-position: 0 -20px;
     }
 
-    .selector-add  {
+    .selector-add {
         background-position: 0 -40px;
     }
 
-    .active.selector-add:focus, .active.selector-add:hover {
+    .active.selector-add:focus,
+    .active.selector-add:hover {
         background-position: 0 -60px;
     }
 
@@ -758,7 +785,7 @@ input[type="submit"], button {
         overflow: auto;
     }
 
-    .inline-group[data-inline-type="stacked"] .inline-related > * {
+    .inline-group[data-inline-type="stacked"] .inline-related>* {
         box-sizing: border-box;
     }
 
@@ -794,7 +821,7 @@ input[type="submit"], button {
         margin-top: 5px;
     }
 
-    .inline-group[data-inline-type="stacked"] .aligned .form-row > div:not([class]) {
+    .inline-group[data-inline-type="stacked"] .aligned .form-row>div:not([class]) {
         width: 100%;
     }
 
@@ -829,11 +856,14 @@ input[type="submit"], button {
         flex-direction: column;
     }
 
-    .submit-row > * {
+    .submit-row>* {
         width: 100%;
     }
 
-    .submit-row input, .submit-row input.default, .submit-row a, .submit-row a.closelink {
+    .submit-row input,
+    .submit-row input.default,
+    .submit-row a,
+    .submit-row a.closelink {
         float: none;
         margin: 0 0 10px;
         text-align: center;
@@ -864,7 +894,9 @@ input[type="submit"], button {
 
     /* Paginator */
 
-    .paginator .this-page, .paginator a:link, .paginator a:visited {
+    .paginator .this-page,
+    .paginator a:link,
+    .paginator a:visited {
         padding: 4px 10px;
     }
 
@@ -893,7 +925,7 @@ input[type="submit"], button {
         padding: 0;
     }
 
-    .login .form-row + .form-row {
+    .login .form-row+.form-row {
         margin-top: 15px;
     }
 
@@ -923,7 +955,8 @@ input[type="submit"], button {
 
     /* Calendar and clock */
 
-    .calendarbox, .clockbox {
+    .calendarbox,
+    .clockbox {
         position: fixed !important;
         top: 50% !important;
         left: 50% !important;
@@ -933,7 +966,8 @@ input[type="submit"], button {
         overflow: visible;
     }
 
-    .calendarbox:before, .clockbox:before {
+    .calendarbox:before,
+    .clockbox:before {
         content: '';
         position: fixed;
         top: 50%;
@@ -944,21 +978,24 @@ input[type="submit"], button {
         transform: translate(-50%, -50%);
     }
 
-    .calendarbox > *, .clockbox > * {
+    .calendarbox>*,
+    .clockbox>* {
         position: relative;
         z-index: 1;
     }
 
-    .calendarbox > div:first-child {
+    .calendarbox>div:first-child {
         z-index: 2;
     }
 
-    .calendarbox .calendar, .clockbox h2 {
+    .calendarbox .calendar,
+    .clockbox h2 {
         border-radius: 4px 4px 0 0;
         overflow: hidden;
     }
 
-    .calendarbox .calendar-cancel, .clockbox .calendar-cancel {
+    .calendarbox .calendar-cancel,
+    .clockbox .calendar-cancel {
         border-radius: 0 0 4px 4px;
         overflow: hidden;
     }
@@ -990,14 +1027,16 @@ input[type="submit"], button {
         padding: 10px;
     }
 
-    .calendarbox .calendarnav-previous, .calendarbox .calendarnav-next {
+    .calendarbox .calendarnav-previous,
+    .calendarbox .calendarnav-next {
         z-index: 1;
         top: 10px;
     }
 
     /* History */
 
-    table#change-history tbody th, table#change-history tbody td {
+    table#change-history tbody th,
+    table#change-history tbody td {
         font-size: 0.8125rem;
         word-break: break-word;
     }
@@ -1008,7 +1047,8 @@ input[type="submit"], button {
 
     /* Docs */
 
-    table.model tbody th, table.model tbody td {
+    table.model tbody th,
+    table.model tbody td {
         font-size: 0.8125rem;
         word-break: break-word;
     }
